--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input {
+  border: 1px solid theme("colors.blue");
+  border-radius: 4px;
+  padding: 8px 12px;
+  &:focus {
+    outline: none !important;
+    border: 1px solid theme("colors.orange");
+  }
+}
