feat(user): contact form added

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <header class="flex justify-center items-center">
-  <div class="h-24 w-24 bg-orange mt-4">
-    <!-- <img src="assets/logo_you_car_your_way.png" alt="logo_you_car_your_way" class="object-contain"> -->
+  <div class="h-24 w-24 mt-4">
+    <img src="assets/logo_you_car_your_way.png" alt="logo_you_car_your_way" class="object-contain">
   </div>
 </header>
 <div class="bg-white shadow-xl rounded-lg mt-10 w-1/2 mx-auto p-8 relative">
@@ -15,7 +15,6 @@
     <div class="flex flex-col space-y-1 w-1/2">
       <label for="email" class="uppercase text-sm font-medium">E-mail</label>
       <input type="email" name="email" formControlName="email" class="text-sm" />
-      
     </div>
     <div class="flex flex-col space-y-1 w-1/2">
       <label for="password" class="uppercase text-sm font-medium">Mot de passe</label>
