--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -65,10 +65,6 @@
         </div>
       </div>
       <div class="flex flex-col space-y-1 w-full">
-        <label for="email" class="uppercase font-medium">E-mail</label>
-        <input type="email" name="email" formControlName="email" />
-      </div>
-      <div class="flex flex-col space-y-1 w-full">
         <label for="subject" class="uppercase font-medium">Sujet</label>
         <input type="text" name="subject" formControlName="subject" />
       </div>
@@ -88,3 +84,4 @@
     <p class="text-center">&copy; 2024 Your Car Your Way. All rights reserved.</p>
   </div>
 </footer>
+<app-talkjs-chat></app-talkjs-chat>
