--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -1,1 +1,3 @@
-<p>support works!</p>
+<main class="flex justify-center items-center h-screen">
+  <app-talkjs-chat class="w-full"></app-talkjs-chat>
+</main>
