--- a/src/app/talkjs-chat/talkjs-chat.component.html
+++ b/src/app/talkjs-chat/talkjs-chat.component.html
@@ -1,1 +1,3 @@
-<div *ngIf="getCurrentMode() === 'support'" id="talkjs-container" style="height: 600px"></div>
+@if (currentUser!.name!.toLowerCase() === 'support') {
+  <div id="talkjs-container" style="height: 600px"></div>
+}
