--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,16 +1,16 @@
-<header class="flex justify-center items-center">
+<header class="flex justify-center items-center pt-6">
   <div class="h-24 w-24 mt-4">
     <img src="assets/images/logo_you_car_your_way.png" alt="logo_you_car_your_way" class="object-contain">
   </div>
 </header>
-<div class="bg-white border border-black/10 shadow-xl rounded-lg mt-10 w-1/2 mx-auto p-8 relative">
+<div class="bg-white border border-black/10 shadow-xl rounded-lg mt-10 w-[90%] md:w-1/2 mx-auto p-8 relative">
   <h1 class="uppercase font-bold text-xl text-center">Connexion</h1>
   <form [formGroup]="loginForm" class="flex flex-col items-center space-y-4 mt-10">
-    <div class="flex flex-col space-y-1 w-1/2">
+    <div class="flex flex-col space-y-1 w-[90%] md:w-1/2">
       <label for="email" class="uppercase text-sm font-medium">E-mail</label>
       <input type="email" name="email" formControlName="email" class="text-sm" />
     </div>
-    <div class="flex flex-col space-y-1 w-1/2">
+    <div class="flex flex-col space-y-1 w-[90%] md:w-1/2">
       <label for="password" class="uppercase text-sm font-medium">Mot de passe</label>
       <input type="password" name="password" formControlName="password" class="text-sm" />
     </div>
